--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         <activity android:name=".activity.RegisterActivity"/>
         <activity android:name=".activity.LoginActivity">
         </activity>
+        <activity android:name=".activity.ActivitySettingActivity"/>
+        <activity android:name=".activity.ActivityModifyPswActivity"/>
+        <activity android:name=".activity.ActivityFindPswActivity"/>
     </application>
 
 </manifest>
