--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.RegisterActivity"/>
-        <activity android:name=".activity.LoginActivity">
-        </activity>
+        <activity android:name=".activity.LoginActivity"/>
         <activity android:name=".activity.ActivitySettingActivity"/>
         <activity android:name=".activity.ActivityModifyPswActivity"/>
         <activity android:name=".activity.ActivityFindPswActivity"/>
         <activity android:name=".activity.ActivityUserInfoActivity"/>
         <activity android:name=".activity.ActivityChangeUserInfoActivity"/>
+        <activity android:name=".activity.ActivityExercisesDetailActivity"/>
     </application>
 
 </manifest>
