--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".activity.ActivityVideoListActivity"/>
         <activity android:name=".activity.ActivityVideoPlayActivity"/>
         <activity android:name=".activity.ActivityPlayHistoryActivity"/>
-    </application>
 
+    </application>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest>
